--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  gap: 20px;
+}
+input {
+  width: 200px;
+  box-shadow: 5px 5px 2px 2px rgba(0, 0, 0, 0.439);
+}
+.post {
+  padding: 20px;
+  width: 300px;
+  height: 100px;
+  background-color: blue;
   color: white;
+  box-shadow: 5px 5px 2px 2px rgba(0, 0, 0, 0.439);
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post-length-box {
+  background-color: brown;
+  width: 300px;
+  box-shadow: 5px 5px 2px 2px rgba(0, 0, 0, 0.439);
+  color: white;
 }
